# integration-tests

./: .gitignore  Cargo.toml  Dockerfile  README.md  access_services.py  access_services_requirements.txt  bors.toml  create_test_cluster.py  create_test_cluster.sh  deny.toml  forward_services_locally.py  renovate.json  run-test-in-docker.sh
airflow-operator/: Cargo.toml  README.md
airflow-operator/.ci/integration-tests/hcloud-centos-8/: cluster.yaml  test.sh
airflow-operator/.ci/integration-tests/hcloud-centos-9/: cluster.yaml
airflow-operator/.ci/integration-tests/ionos-centos-8/: cluster.yaml  test.sh
airflow-operator/tests/: create_cluster.rs
airflow-operator/tests/common/: airflow.rs  checks.rs  mod.rs
airflow-operator/tests/kuttl/smoke/: 00-assert.yaml  00-install-postgresql.yaml  01-assert.yaml  01-install-redis.yaml  02-assert.yaml  02-install-airflow-cluster.yaml  02-install-airflow.yaml  03-assert.yaml  03-init-airflow-db.yaml  05-assert.yaml  06-assert.yaml  health.py
commons/: CHANGELOG.md  Cargo.toml
commons/src/: lib.rs
commons/src/operator/: checks.rs  mod.rs  service.rs  setup.rs
commons/src/test/: kube.rs  prelude.rs  repository.rs  temporary_resource.rs
druid-operator/: Cargo.toml  README.md  kuttl-test.yaml
druid-operator/.ci/integration-tests/aws-centos-8/: cluster.yaml  test.sh
druid-operator/.ci/integration-tests/hcloud-centos-8/: cluster.yaml  test.sh
druid-operator/.ci/integration-tests/ionos-centos-8/: cluster.yaml  test.sh
druid-operator/tests/: create_cluster.rs
druid-operator/tests/common/: druid.rs  mod.rs  zookeeper.rs
druid-operator/tests/ingestion/no-s3-ext/: 01-install-hdfs.yaml  02-install-druid.yaml
druid-operator/tests/ingestion/s3-ext/: 02-install-druid.yaml  healthcheck.py
druid-operator/tests/kuttl/authorizer/: 02-install-opa.yaml  03-druid-cluster.yaml  05-test-authorization-container.yaml  README.md
druid-operator/tests/kuttl/smoke/: 00-install-zk.yaml  01-install-druid.yaml  02-assert.yaml  02-healthcheck-container.yaml  02-install-druid.yaml  03-assert.yaml  03-healthcheck.yaml  04-healthcheck.yaml  05-assert.yaml  ingestioncheck.py
druid-operator/tests/opa/authorizer/: 00-install-zk.yaml  01-assert.yaml  01-install-opa.yaml  02-assert.yaml  02-druid-cluster.yaml  02-install-hdfs.yaml  03-druid-cluster.yaml  04-assert.yaml  06-assert.yaml  06-test-authorization.yaml  README.md  authcheck.py
hive-operator/: Cargo.toml  README.md
hive-operator/.ci/integration-tests/hcloud-centos-8/: cluster.yaml  test.sh
hive-operator/.ci/integration-tests/ionos-centos-8/: cluster.yaml  test.sh
hive-operator/python/: requirements.txt  test_metastore.py
hive-operator/tests/: create_cluster.rs
hive-operator/tests/common/: hive.rs  mod.rs
hive-operator/tests/kuttl/smoke/: 00-assert.yaml  00-install-hive.yaml  01-assert.yaml  01-install-postgres.yaml  02-assert.yaml  02-prepare-test-metastore.yaml  10-install-hive.yaml  requirements.txt  test_metastore.py
kafka-operator/: Cargo.toml  README.md  deny.toml  kuttl-test.yaml
kafka-operator/.ci/integration-tests/aws-centos-8/: cluster.yaml  test.sh
kafka-operator/.ci/integration-tests/azure-aks/: cluster.yaml  test.sh
kafka-operator/.ci/integration-tests/hcloud-centos-8/: cluster.yaml  test.sh
kafka-operator/.ci/integration-tests/ionos-centos-8/: cluster.yaml  test.sh
kafka-operator/tests/: create_cluster.rs  monitoring.rs  scale_cluster.rs
kafka-operator/tests/common/: kafka.rs  mod.rs  zookeeper.rs
kafka-operator/tests/kuttl/smoke/: 00-install-zk.yaml  01-install-kafka.yaml  02-assert.yaml  03-metrics.yaml
kafka-operator/tests/kuttl/smoke-2.8.1/: 00-assert.yaml  01-assert.yaml  01-install-kafka.yaml  03-assert.yaml  metrics.py
kafka-operator/tests/kuttl/smoke-3.1.0/: 00-assert.yaml  00-install-zk.yaml  01-assert.yaml  01-install-kafka.yaml  02-install-test-container.yaml  03-assert.yaml  03-metrics.yaml  03-prepare-test.yaml  metrics.py
kafka-operator/tests/kuttl/upgrade-2.8.1-to-3.1.0/: 00-assert.yaml  00-install-zk.yaml  01-assert.yaml  01-install-kafka.yaml  02-assert.yaml  02-write-data.yaml  03-assert.yaml  03-upgrade-kafka.yaml  04-assert.yaml  04-read-data.yaml
monitoring-operator/: Cargo.toml  README.md  deny.toml
monitoring-operator/.ci/integration-tests/aws-centos-8/: cluster.yaml  test.sh
monitoring-operator/.ci/integration-tests/hcloud-centos-8/: cluster.yaml
monitoring-operator/tests/: create_cluster.rs
monitoring-operator/tests/common/: monitoring.rs
nifi-operator/: Cargo.toml  Dockerfile  README.md  deny.toml  kuttl-test.yaml
nifi-operator/.ci/integration-tests/aws-centos-8/: cluster.yaml  test.sh
nifi-operator/.ci/integration-tests/hcloud-centos-8/: cluster.yaml  test.sh
nifi-operator/docker/: Dockerfile
nifi-operator/tests/: create_cluster.rs  monitoring.rs  scale_cluster.rs
nifi-operator/tests/common/: checks.rs  mod.rs  nifi.rs
nifi-operator/tests/kuttl/resources/: 00-assert.yaml  00-install-zk.yaml  01-assert.yaml  01-install-nifi.yaml
nifi-operator/tests/kuttl/smoke/: 00-assert.yaml  00-install-zk.yaml  01-assert.py  02-assert.py  (+24 more)
spark-operator/: Cargo.toml  README.md  deny.toml
spark-operator/.github/workflows/: rust.yml
spark-operator/tests/: create_cluster.rs  restart_cluster.rs  scale_cluster.rs  update_cluster.rs
spark-operator/tests/common/: spark.rs
superset-operator/: Cargo.toml  README.md  kuttl-test.yaml
superset-operator/tests/: create_cluster.rs
superset-operator/tests/common/: checks.rs  mod.rs  service.rs  superset.rs
trino-operator/: Cargo.toml  README.md  create_test_cluster.fish  kuttl-test.yaml
trino-operator/tests/: create_cluster.rs
trino-operator/tests/common/: checks.rs  hive.rs  mod.rs  s3.rs  trino.rs  trino_client.rs
zookeeper-operator/: Cargo.toml  README.md  deny.toml  kuttl-test.yaml
zookeeper-operator/.github/workflows/: test.yml
zookeeper-operator/tests/: create_cluster.rs  monitoring.rs  scale_cluster.rs  scheduler.rs  update_cluster.rs
zookeeper-operator/tests/common/: checks.rs  four_letter_commands.rs  mod.rs  service.rs  zookeeper.rs
(+219 files in other folders)
