[workspace]

members = [
    "airflow-operator",
    "commons",
    #"druid-operator",
    "hive-operator",
    #"kafka-operator",
    # "monitoring-operator",
    # "nifi-operator",
    "opa-operator",
    "spark-operator",
    "superset-operator",
    # "trino-operator",
    "zookeeper-operator"
]
