[package]
name = "airflow-operator-integration-tests"
version = "0.1.0"
edition = "2021"
license = "OSL-3.0"
repository = "https://github.com/stackabletech/integration-tests"
description = "Integration tests for the Stackable Operator for Apache Airflow"

[dependencies]
anyhow = "1.0"
indoc = "1.0"
integration-test-commons = { path = "../commons" }
stackable-airflow-crd = { git = "https://github.com/stackabletech/airflow-operator.git", branch = "airflow_operatorrs_070"}
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
strum = "0.23"
strum_macros = "0.23"
reqwest = { version = "0.11", features = ["blocking", "json"] }

