[package]
description = "Integration tests for the Stackable Operator for Apache Airflow"
edition = "2021"
license = "OSL-3.0"
name = "airflow-operator-integration-tests"
repository = "https://github.com/stackabletech/integration-tests"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
indoc = "1.0"
integration-test-commons = { path = "../commons" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
#serde = "1.0"
#serde_json = "1.0"
serde_yaml = "0.8"
stackable-airflow-crd = { git = "https://github.com/stackabletech/airflow-operator.git", branch = "main"}
#strum = "0.23"
#strum_macros = "0.23"


