[package]
authors = ["Siegfried Weber <mail@siegfriedweber.net>"]
description = "Common functions used in the integration tests of the Stackable components"
edition = "2018"
license = "Apache-2.0"
name = "integration-test-commons"
repository = "https://github.com/stackabletech/integration-test-commons"
version = "0.7.0-nightly"

[dependencies]
anyhow = "1.0"
futures = "0.3"
indoc = "1.0"
once_cell = "1.8"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
spectral = "0.6"
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.10.0" }
strum = "0.23"
strum_macros = "0.23"
tokio = { version = "1.13", features = ["rt-multi-thread"] }
uuid = { version = "0.8", features = ["v4"] }
