[package]
name = "druid-operator-integration-tests"
version = "0.1.0"
edition = "2018"
license = "OSL-3.0"
repository = "https://github.com/stackabletech/integration-tests"
description = "Integration tests for the Stackable Operator for Apache Druid"

[dependencies]
anyhow = "1.0"
integration-test-commons = { path = "../commons" }
stackable-druid-crd = { git = "https://github.com/stackabletech/druid-operator.git", branch = "main"}
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
reqwest = { version = "0.11", features = ["blocking"] }

[dev-dependencies]
stackable-zookeeper-crd = { git = "https://github.com/stackabletech/zookeeper-operator.git", branch="main"}
