[package]
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
description = "Integration tests for the Stackable Operator for Apache Kafka"
edition = "2018"
license = "OSL-3.0"
name = "kafka-operator-integration-tests"
repository = "https://github.com/stackabletech/kafka-operator-integration-tests"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
integration-test-commons = { path = "../commons" }
reqwest = { version = "0.11", features = ["blocking"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
stackable-kafka-crd = { git = "https://github.com/stackabletech/kafka-operator.git", branch = "main"}

[dev-dependencies]
k8s-openapi = { version = "0.13", default-features = false, features = ["v1_22"] }
