[package]
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
description = "Integration tests for the Stackable Operator for Monitoring and Metrics"
edition = "2018"
license = "OSL-3.0"
name = "monitoring-operator-integration-tests"
repository = "https://github.com/stackabletech/monitoring-operator-integration-tests"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
indoc = "1.0"
integration-test-commons = { path = "../commons" }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
stackable-monitoring-crd = { git = "https://github.com/stackabletech/monitoring-operator.git", branch = "main"}
