[package]
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
description = "Integration tests for the Stackable Operator for Apache NiFi"
edition = "2018"
license = "OSL-3.0"
name = "nifi-operator-integration-tests"
repository = "https://github.com/stackabletech/nifi-operator-integration-tests"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
integration-test-commons = { path = "../commons" }
reqwest = { version = "0.11", features = ["blocking"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
stackable-nifi-crd = { git = "https://github.com/stackabletech/nifi-operator.git", branch = "main"}
