[package]
authors = ["Malte Sander <malte.sander.it@gmail.com>"]
description = "Integration tests for the Stackable Operator for Apache Spark"
edition = "2018"
license = "OSL-3.0"
name = "spark-operator-integration-tests"
repository = "https://github.com/stackabletech/spark-operator-integration-tests"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
integration-test-commons = { path = "../commons" }
serde = "1.0"
serde_yaml = "0.8"
stackable-spark-crd = { git = "https://github.com/stackabletech/spark-operator.git", branch = "feature/stateful-sets" }
