[package]
authors = ["Siegfried Weber <mail@siegfriedweber.net>"]
description = "Integration tests for the Stackable Operator for Trino"
edition = "2021"
license = "OSL-3.0"
name = "trino-operator-integration-tests"
repository = "https://github.com/stackabletech/integration-tests"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
bcrypt = "0.10"
indoc = "1.0"
integration-test-commons = { path = "../commons" }
openssl = "0.10"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rust-s3 = { version = "0.28", features = ["blocking"] }
serde = "1.0"
serde_yaml = "0.8"
stackable-hive-crd = { git = "https://github.com/stackabletech/hive-operator.git", tag = "0.2.0"}
stackable-trino-crd = { git = "https://github.com/stackabletech/trino-operator.git", branch = "main"}
